node-app/manifest/3_node_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: hello-telemetry
  labels:
    app: node-app
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: node-app
